WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28860
SVGSVGElement suspend methods argument/return types incorrect
https://bugs.webkit.org/show_bug.cgi?id=28860
Summary
SVGSVGElement suspend methods argument/return types incorrect
Cameron McCormack (:heycam)
Reported
2009-08-31 16:48:22 PDT
Should be "unsigned" rather than "unsigned long".
Attachments
Patch v1
(2.05 KB, patch)
2009-08-31 16:50 PDT
,
Cameron McCormack (:heycam)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron McCormack (:heycam)
Comment 1
2009-08-31 16:50:49 PDT
Created
attachment 38844
[details]
Patch v1 Not adding any tests since the methods aren't implemented yet anyway.
Eric Seidel (no email)
Comment 2
2009-09-01 00:24:38 PDT
Comment on
attachment 38844
[details]
Patch v1 I would probably have called "maxWaitMilliseconds" "maxWaitInMilliseconds". Looks fine though. :)
Eric Seidel (no email)
Comment 3
2009-09-01 00:38:31 PDT
Comment on
attachment 38844
[details]
Patch v1 Rejecting patch 38844 from commit-queue. This patch will require manual commit. ['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1'] failed with exit code 1
Eric Seidel (no email)
Comment 4
2009-09-01 02:17:54 PDT
Comment on
attachment 38844
[details]
Patch v1 media/video-seeking.html -> failed I think it's just another flakey media test. :(
Eric Seidel (no email)
Comment 5
2009-09-01 04:11:59 PDT
Comment on
attachment 38844
[details]
Patch v1 Clearing flags on attachment: 38844 Committed
r47926
: <
http://trac.webkit.org/changeset/47926
>
Eric Seidel (no email)
Comment 6
2009-09-01 04:12:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug