2009-09-01  Cameron McCormack  <cam@mcc.id.au>

Reviewed by Eric Seidel.

        SVGSVGElement suspend methods argument/return types incorrect
        https://bugs.webkit.org/show_bug.cgi?id=28860

        Also fix the style of the argument names.

        * svg/SVGSVGElement.cpp:
        (WebCore::SVGSVGElement::suspendRedraw):
        (WebCore::SVGSVGElement::unsuspendRedraw):
        * svg/SVGSVGElement.h:


Canonical link: https://commits.webkit.org/39502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47926 268f45cc-cd09-0410-ab3c-d52691b4dbfc